<resources>
    <string name="app_name">App Agenda</string>
    <string name="txt_titulo">App Agenda</string>
    <string name="txt_hint_edit_TituloDoCompromisso">Titulo do Compromisso</string>
    <string name="txt_hint_edit_Data">Data (dd/mm/yyy)</string>
    <string name="txt_hint_edit_Hora">Hora (hh:mm)</string>
    <string name="txt_hint_edit_Local">Local</string>
    <string name="txt_button_Limpar">Limpar</string>
    <string name="txt_button_Salvar">Salvar</string>
    <string name="txt_button_Finalizar">Finalizar</string>
</resources>